--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,14 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5 {
+  color: white;
+}
+
 a {
   color: inherit;
   text-decoration: none;
