--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  @font-face {
+    font-family: "mattone";
+    font-weight: 600;
+    src: url("/mattone/Mattone150.otf") format("otf");
+  }
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "mattone"
 }
 
 h1,
@@ -16,6 +23,7 @@ h3,
 h4,
 h5 {
   color: white;
+  font-family: "mattone";
 }
 
 a {
